--- a/docs-site/docs/concepts/ai-features.mdx
+++ b/docs-site/docs/concepts/ai-features.mdx
@@ -598,7 +598,7 @@ Planned AI enhancements:
 
 ## Next Steps
 
-- Configure [AI settings](/configuration#ai-features) for your needs
+- Configure [AI settings](/configuration#ai-settings) for your needs
 - Explore [Templates](/concepts/templates) with AI optimization
-- Check out [Examples](/examples/api-testing-workflow) with AI assistance
+- Check out [Examples](/examples/advanced-scenarios) with AI assistance
 - Learn about [Advanced Features](/advanced/troubleshooting) for AI debugging
